--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <meta   charset="utf-8">
+    <meta   http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta   name="viewport" content="width=device-width,initial-scale=1.0">
+    <link   rel="icon" href="favicon.ico">
+    <link   rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="Js/bootstrap.min.js"></script>
+    <script src="Js/bootstrap.min.js"></script>
+    <!--<style>
+    body {
+      background-image: url("/images/landing.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+    }
+    </style>-->
     <title>vue_spa</title>
   </head>
   <body>
