--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,16 @@
     <link   rel="stylesheet" href="css/bootstrap.min.css">
     <script src="Js/bootstrap.min.js"></script>
     <script src="Js/bootstrap.min.js"></script>
-    <!--<style>
-    body {
-      background-image: url("/images/landing.jpg");
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed;
-    }
-    </style>-->
+    <style>
+    body 
+    {
+        background-image: url("/images/new.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        background-attachment: fixed;
+      }
+    </style>
     <title>vue_spa</title>
   </head>
   <body>
